--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,5 +1,4 @@
-fastapi
-uvicorn
-SQLAlchemy
-psycopg2-binary
-alembic
+fastapi~=0.95.1
+uvicorn~=0.22.0
+SQLAlchemy~=2.0.13
+psycopg2-binary~=2.9.6
